--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,112 @@
   margin-left: auto;
   gap: 100px;
   font-size: large;
-  font-weight: bold;}
+  font-weight: bold;
+  justify-content: center;
+  padding: auto;
+  background: hsl(187 70% 85%);
+  --shadowColor: 187 60% 40%;
+  max-width: 50rem;
+  width: 100%;
+  box-shadow: 0.65rem 0.65rem 0 hsl(var(--shadowColor) / 1);
+	border-radius: 0.8rem;
+  overflow: hidden;
+  border: 0.5rem solid;
+  width: 50%; /* Adjust the width based on your design */
+    margin: 0 auto; /* Center the container horizontally */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+
+
+
+/* CSS */
+.button-56 {
+  align-items: center;
+	background: hsl(187 75% 64%);
+  border: 2px solid #111;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-56:after {
+  background-color: #111;
+  border-radius: 8px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-56:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-56:active {
+  background-color: #e5daff;
+  outline: 0;
+}
+
+.button-56:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .button-56 {
+    padding: 0 40px;
+  }
+}
+
+.button-custom{
+  margin-top: 20px;
+  padding-bottom: 10px;
+}
+
+* {
+	box-sizing: border-box;
+  
+}
+main{
+  color: #000;
+}
+form {
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 500px;
+  padding: 20px;
+  width: 320px;
+}
+
+h2 {
+  color: #080808;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
+}
