--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App-header{
-    background-color: #e9f0f0;
+    background-color: #fff;
     padding: 20px 20px 20px 60px;
     border-radius: 10px;
     display: flex;
